--- a/内边距之新浪导航.html
+++ b/内边距之新浪导航.html
@@ -4,13 +4,33 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
+		div,body{
+			margin:0px;
+			padding: 0px;
+		}
 		.box{
 			height: 40px;
-			background:#ccc; 
+			background:#eee; 
+			border-top: 2px solid #ffb500;
 		}
 		.nav{
 			height: 40px;
+			width: 1000px;
 			margin: 0 auto;
+			/*padding-top:10px;*/
+		}
+		a{
+			color:#666;
+			font:12px/40px 微软雅黑;
+			display: inline-block;
+			width: 100px;
+			height: 40px;
+			text-decoration: none;
+			text-align: center;
+		}
+		a:hover{
+			background: #ccc;
+			color:#ffb500;
 		}
 	</style>
 </head>
