--- a/行业动态.html
+++ b/行业动态.html
@@ -31,7 +31,7 @@
 			font-size:14px;
 			padding-left:19px;
 			line-height: 23px;
-			background: url(li_bg.jpg) no-repeat 9px 10px;
+			background: url(image/li_bg.jpg) no-repeat 9px 10px;
 		}
 	</style>
 </head>
