--- a/尚合首页.html
+++ b/尚合首页.html
@@ -78,7 +78,7 @@
 		}
 		.inform .inform_con{
 			height: 30px;
-			width: 1000px;
+			width: 980px;
 			margin: 0 auto;
 		}
 		.inform .inform_con .notice{
@@ -86,8 +86,32 @@
 		}
 		.inform .inform_con .share{
 			height: 16px;
-			width: 128px;
+			width: 82px;
 			padding-top: 7px;
+		}
+		.con{
+			width: 980px;
+			height: 226px;
+			margin: 0 auto;
+			padding:20px 0;
+		}
+		.con .pro,.tech{
+			width: 308px;
+			height: 224px;
+			border:1px solid #e4e4e4;
+		}
+		.con .news{
+			height: 224px;
+			width: 373px;
+			border:1px solid #e4e4e4;
+			margin:0 12px;
+		}
+		.tech{
+			width: 268px;
+		}
+		.footer{
+			height: 336px;
+			background: #000;
 		}
 	</style>
 </head>
@@ -127,11 +151,24 @@
 		</div>
 	</div>
 	<div class="con">
-		<div class="pro">
-			
+		<div class="pro fl">
+			<div class="pro_header"><img src="images/o.jpg" alt="">新品发布</div>
+			<div class="pro_pic"></div>
 		</div>
-		<div class="news"></div>
-		<div class="tech"></div>
+		<div class="news fl">
+			<div class="news_header"><img src="images/o.jpg" alt="">新闻中心</div>
+			<ul>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+				<li><a href="#"></a></li>
+			</ul>
+		</div>
+		<div class="tech fl">
+			<div class="tech_header"><img src="images/o.jpg" alt="">技术与支持</div>
+		</div>
 	</div>
+	<div class="footer"></div>
 </body>
 </html>
